2011-03-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* Makefile.in (warn): Add a dummy "warn" target.

2010-10-21  Julien Danjou  <julien@danjou.info>

	* todo: Remove done and duplicate items.

2010-10-06  Julien Danjou  <julien@danjou.info>

	* todo: Remove other broken links

	* make.bat: Remove Windows 98 stuff and reference to my.gnus.org.

2010-10-04  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.in: Fix help strings.

2010-04-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* .gitignore: Remove configure from ignores.

2010-04-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* configure: Regenerated from configure.in using Autoconf 2.65.

2009-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* GNUS-NEWS: Generated.

2009-01-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* .dir-locals.el: New file.

2009-01-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* README: Add outline.  Clarify Emacs versions.

2008-05-01  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* README: Bump version to 0.11

2008-04-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* Makefile.in (release-check-settings): Clarify codename.
	(release-help): New target.
	(release-cvs-export): Add umask.  Suggested by Sven Joachim.

2008-04-11  Reiner Steib  <Reiner.Steib@gmx.de>

	* README: Bump version to 0.9.

2008-04-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* README: No Gnus v0.8 is released.

2008-03-01  Reiner Steib  <Reiner.Steib@gmx.de>

	* Update copyright years.

2008-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* GNUS-NEWS: Generated.

	* Makefile.in (datarootdir): Define.

	* aclocal.m4 (AC_PATH_LISPDIR): Quote directory name that might contain
	whitespace.

	* configure: Regenerate.

	* mkinstalldirs: Replace it with the 2006-05-11.19 version.

2008-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* GNUS-NEWS: Generated.

2008-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* GNUS-NEWS: Generated.

2007-11-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* GNUS-NEWS: Generated.
