@@ -1,3 +1,9 @@
+2011-04-06  David Engster  <dengste@eml.cc>
+
+	* Makefile.in (lick-fail-on-warning): New rule to compile with warnings
+	as errors.
+	(fail-on-warning): Use it.
+
 2011-03-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* Makefile.in (warn): Add a dummy "warn" target.
